CIRC-2385: Fix sending notifications to proxy user (#1588)